--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AULA GIT</title>
+    <link rel="stylesheet" href="styles.css" >
 </head>
 <body>
-    
+    <h1>Aula de GIT</h1>
+
+    <script src="javascript.js"></script>
 </body>
 </html>
