--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 <body>
     <h1>Aula de GIT</h1>
 
+    <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Non quae sequi, eos aliquam, magni excepturi aspernatur soluta nisi tenetur numquam nesciunt? Alias exercitationem repellendus dignissimos a, temporibus reprehenderit suscipit esse!
+    </p>
     <script src="javascript.js"></script>
 </body>
 </html>
